Adding team Page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       color: #999;
       text-align:center;
       margin-left:20%;
+      margin-top:24px;
     }
     .embrace b {
       float: left;
@@ -33,9 +34,9 @@
     white-space: nowrap;
     top: 0;
     left: 0;
-    /*-webkit-animation: move 3s;
+    -webkit-animation: move 3s;
     -webkit-animation-iteration-count: infinite;
-    -webkit-animation-delay: 1s;*/
+    -webkit-animation-delay: 1s;
     }
     @keyframes move {
     0%  { top: 0px; }
@@ -204,8 +205,8 @@
             <div class="navbar navbar-default">
                     <div class="container">
                         <ul class="nav navbar-nav navbar-center">
-                            <li><a href="/about.html">About</a></li>
-                            <li><a href="/team.html">Team</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="./team.html">Team</a></li>
                             <li><a href="/">Home</a></li>
                             <li><a id="event-link">Events</a></li>
                         </ul>
@@ -219,7 +220,7 @@
             <div class="row">
             <h1 class="parakram">PARAKRAM '19 </h1>
             <h2>4-5<sup>th</sup> OCTOBER</h2>
-            <p> THE LEADING SPORT FEST OF JUIT</p>
+            <p class="desc"> THE LEADING SPORT FEST OF JUIT</p>
             <div class="embrace" id="sponsors">
                     <b>
                           <span1>
