--- a/team.html
+++ b/team.html
@@ -4,18 +4,64 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>JYC TEAM</title>
+    <!----<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"-->
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Mada&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/image.css">
+    <title>Team</title>
   </head>
   <body>
-    <div class="row">
-        <div class="col">
-            <img src=""
+    <div class="team">
+      <div class="outerd">
+          <div class="navbar navbar-default">
+                  <div class="container">
+                      <ul class="nav navbar-nav navbar-center">
+                          <li><a href="/about.html">About</a></li>
+                          <li><a href="/team.html">Team</a></li>
+                          <li><a href="/">Home</a></li>
+                          <li><a id="event-link">Events</a></li>
+                      </ul>
+                  </div>
+              </div>
+      </div>  
+    </div>  
+    <center><p class="hd">THE TEAM</p><p class="ld">The People who make it happen</p></center>
+    <div class="container-a4">
+        <ul class="caption-style-4">
+          <li>
+            <img src="images/pp.jpeg" alt="">
+            <div class="caption">
+              <div class="blur"></div>
+              <div class="caption-text">
+                <h1>Praduymn Agrawal</h1>
+                <p>President</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/pp.jpeg" alt="">
+            <div class="caption">
+              <div class="blur"></div>
+              <div class="caption-text">
+                <h1>Amazing Caption</h1>
+                <p>Whatever It Is - Always Awesome</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="images/pp.jpeg" alt="">
+            <div class="caption">
+              <div class="blur"></div>
+              <div class="caption-text">
+                <h1>Amazing Caption</h1>
+                <p>Whatever It Is - Always Awesome</p>
+              </div>
+            </div>
+          </li>
+         </ul>
         </div>
-    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
