--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
     .embrace span1 {
      display: inline-block;
-    color:black;
+    color:red;
     font-weight:900%;
     position: relative;
     white-space: nowrap;
@@ -174,6 +174,40 @@
           background-image: linear-gradient(to top right,#000,#222629); /* Standard syntax (must be last) */
           /*background-image: url("image2.jpg");*/
     }
+    @media screen and (max-width:540px){
+        .embrace {
+      padding: 0em 0em;
+      font: normal 20px/25px 'Mada', sans-serif;
+      color: #999;
+      text-align:center;
+      margin-left:30%;
+      margin-top:39px;
+    }
+    .embrace b {
+      float: left;
+      text-align:center;
+      overflow: hidden;
+      position: relative;
+      height: 50px;
+    }
+    .embrace span1 {
+     display: inline-block;
+    color:red;
+    font-weight:900%;
+    position: relative;
+    white-space: nowrap;
+    top: 0;
+    left: 0;
+    -webkit-animation: move 3s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-delay: 1s;
+    }
+    @keyframes move {
+    0%  { top: 0px; }
+    20% { top: -50px; }
+    40% { top: -100px; }
+    }
+    }
     /* For Tablets */
     @media screen and (max-width:1024px){
         #highlight-full-screen{
@@ -199,8 +233,8 @@
     }
 </style>
 <body>
-    <section>
-    <div class="container-fluid">     
+    <div class="container-fluid">  
+      <section class="main">   
         <div class="outerd">
             <div class="navbar navbar-default">
                     <div class="container">
@@ -212,7 +246,8 @@
                         </ul>
                     </div>
                 </div>
-        </div>      
+        </div>  
+       </section>     
         <div class="banner">
             <video autoplay muted loop>
                 <source src="bg.mp4" type="video/mp4">
@@ -233,6 +268,5 @@
             </div>
         </div> 
       </div>   
-    </section>
 </body>
 </html>
