Added contact,registration,events page

--- a/team.html
+++ b/team.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <!-- Section: Team v.1 -->
+    <div class="codrops-top clearfix" style="z-index:10000000;font-size: 200%">
+        <a href="/"><strong>&laquo; Back to Home </strong></a> 
+    </div>    
 <section class="team-section text-center my-5">
         <h1>THE TEAM</h1>
         <!-- Section description -->
