Edited Home page

--- a/Contact.html
+++ b/Contact.html
@@ -14,9 +14,7 @@
         </div>
     </div>
 <div class="row">
-    <div class="col-12 col-sm-6">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfJN_ZN1QndF99YK7pomB4aU4WcVeGgsclShfpZWSN-biT_7Q/viewform?embedded=true" width="640" height="477" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
+        <iframe class="col-12 col-sm-6" src="https://docs.google.com/forms/d/e/1FAIpQLSfJN_ZN1QndF99YK7pomB4aU4WcVeGgsclShfpZWSN-biT_7Q/viewform?embedded=true" height="477" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <div class="col-12 col-sm-6">
         <footer style="background-color: rgb(0, 0, 0, 0.5)">
             <h1 style="color: white; margin-left: 5%; margin-top: 5%; font-size: 40px;">Contact us</h1>
