--- a/team.html
+++ b/team.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Mada" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
     <link rel="stylesheet" href="CSS/style1.css">
     <link rel="stylesheet" href="CSS/bootstrap.css">
     <link rel="stylesheet" href="CSS/team.css">
-    <title>Document</title>
+    <title>Team | Parakram</title>
 </head>
 <body>      
     <li id="team" data-nav="Team">
@@ -26,7 +27,7 @@
                                 </div>
                             </div>  
                     </section> 
-            <center><h3>The Team</h3>
+            <center><h2>The Team</h2>
             <p>The people who make it happen.</p></center>
             <div class="row">
 
@@ -40,7 +41,7 @@
                 <div class="col-sm-4 col-xs-6">
                     <div class="thumb">
                         <img src="images/pt.jpg" width="80%" height="30%">
-                        <div class="text">Prashshti Diwedi - Treasurer</div>						
+                        <div class="text">Prashasti Diwedi - Treasurer</div>						
                     </div>
                 </div>
 
@@ -55,7 +56,7 @@
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
                         <img src="images/gs.jpg" width="80%" height="auto">
-                        <div class="text">Garima Sharma - Sports Coordinator</div>						
+                        <div class="text">Garima Kanwar - Sports Coordinator</div>						
                     </div>
                 </div>
 
@@ -66,6 +67,19 @@
                 </div>							
                 
              </div>
+         </div>
+         <div class="row">
+                <div class="col-sm-6 col-xs-6">
+                        <div class="thumb">
+                            <img src="images/samad.jpeg" width="80%" height="auto">
+                            <div class="text">Samad - Website Creator</div>
+                </div>
+                </div>
+                <div class="col-sm-6 col-xs-6">
+                        <div class="thumb">
+                            <img src="images/kautubh.jpeg" width="80%" height="auto">
+                            <div class="text">Kaustubh - Website Creator</div>
+                </div>
          </div>
         </div>
     </li>      	
