Added different events and linked brochure

--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="css/hov.css">
+        <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Contact us: Parakram 2K19</title>
 </head>
@@ -19,15 +20,15 @@
         <footer style="background-color: rgb(0, 0, 0, 0.5)">
             <h1 style="color: white; margin-left: 5%; margin-top: 5%; font-size: 40px;">Contact us</h1>
             <hr style="color: white; border: 1px solid">
-            <a class="hoverh" href="mailto:sarthakdhamija@gmail.com"><h4 style="color: rgba(255, 255, 255, 0.404);  margin-left: 5%; font-size: 20px;">sarthakdhamija@gmail.com</h4></a>
-            <a class="hoverh" href="tel: 9425113141"><h4 style="color: rgba(255, 255, 255);  margin-left: 5%; font-size: 20px;">+91-9425113141</h4></a>
+            <div class="contact" style="color: white">
+            <p>Praduymn Agrawal-President</p>
+            <p>president.jyc@juit.ac.in | 9012936769</p>
             <br>
-            <a class="hoverh" href="mailto:sarthakdhamija@gmail.com"><h4 style="color: rgba(255, 255, 255, 0.404);  margin-left: 5%; font-size: 20px;">sarthakdhamija@gmail.com</h4></a>
-            <a class="hoverh" href="tel: 9425113141"><h4 style="color: rgba(255, 255, 255);  margin-left: 5%; font-size: 20px;">+91-9425113141</h4></a>
-            <br>
-            <a class="hoverh" href="mailto:sarthakdhamija@gmail.com"><h4 style="color: rgba(255, 255, 255, 0.404);  margin-left: 5%; font-size: 20px;">sarthakdhamija@gmail.com</h4></a>
-            <a class="hoverh" href="tel: 9425113141"><h4 style="color: rgba(255, 255, 255);  margin-left: 5%; font-size: 20px;">+91-9425113141</h4></a>
-        </footer>
+            <p>Mehul Bandlish-Sports Coordinator</p>
+            <p>mehulbandlish@gmail.com | 8894988348</p><br>
+            <p>Garima Kanwar-Sports Coordinator</p>
+            <p>president.jyc@juit.ac.in | 8988128985</p>
+            </div></footer>
     </div>
 </div>
 
