--- a/eventf.html
+++ b/eventf.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Mada|Cinzel" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
     <link rel="stylesheet" href="CSS/eventstyle.css">
     <link rel="stylesheet" href="CSS/bootsrap.css">
 	<link rel="stylesheet" type="text/css" href="css/plugins.css">
@@ -37,25 +38,25 @@
         <div class="container" style="margin-top: -80px">
                 
                 <div class="row">
-                        <div class="col-12 col-sm-4"><a href="R1bb.html"><div class="cont">
+                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=6&7"><div class="cont">
                             <img class="img-fluid" src="img/basketball1.svg" width="100" height="100"></div></a>
                         </div>
-                        <div class="col-12 col-sm-4"><a href="R1hb.html"><div class="cont">
+                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=4"><div class="cont">
                             <img class="img-fluid" src="img/volleyball.svg" width="100" height="100"></div></a>
                         </div>
-                        <div class="col-12 col-sm-4"><a href="R1vb.html"><div class="cont">
+                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=8"><div class="cont">
                             <img class="img-fluid" src="img/volleyball-silhouette-vector-15.png" width="100" height="100"></div></a>
                         </div>
                     </div>
                     
                     <div class="row">
-                        <div class="col-12 col-sm-4"><a href="R1bm.html"><div class="cont">
+                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=5"><div class="cont">
                             <img class="img-fluid" src="img/badminton_439334.png" width="100" height="100"></div></a>
                         </div>
-                        <div class="col-12 col-sm-4"><a href="R1tt.html"><div class="cont">
+                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=3"><div class="cont">
                             <img class="img-fluid" src="img/table-tennis.png" width="100" height="100"></div></a>
                         </div>
-                        <div class="col-12 col-sm-4"><a href="R1ch.html"><div class="cont">
+                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=9"><div class="cont">
                             <img class="img-fluid" src="img/chess.svg" width="100" height="100"></div></a>
                         </div>
                     </div>
