Edited about page and Events page

--- a/Contact.html
+++ b/Contact.html
@@ -27,7 +27,7 @@
             <p>Mehul Bandlish-Sports Coordinator</p>
             <p>mehulbandlish@gmail.com | 8894988348</p><br>
             <p>Garima Kanwar-Sports Coordinator</p>
-            <p>president.jyc@juit.ac.in | 8988128985</p>
+            <p>garimakanwar.78@gmail.com | 8988128985</p>
             </div></footer>
     </div>
 </div>
