--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <title>Parakram</title>
 </head>
 <body>
+        <!-- <div id="loader-wrapper">
+                <div id="loader"><img src="images/l" width="80%" height="auto"></div>
+            </div> -->
     <div class="container-fluid"> 
       <section class="main">   
         <div class="outerd">
@@ -44,9 +47,15 @@
             <h2 style="font-size: 330%">4-5<sup>th</sup> OCTOBER</h2>
             <p class="desc"> THE LEADING SPORT FEST OF JUIT
             <p class="desc">GAME | LIES | WITHIN</p>
-            <center><a class="btn btn-raised btn-danger" id="formb" style="margin-top: -5px;">Registrations Open</a></center>
+            <center><a class="btn btn-raised btn-danger" id="formb" style="margin-top: -5px;" href="RegT.html">Registrations Open</a></center>
          </div>
         </div> 
       </div> 
+      <script>
+          $(window).load(function() {
+        $(".loader").fadeOut("slow");
+});
+<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+</script>
 </body>
 </html>
