--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Maven+Pro" rel="stylesheet"> 
+    <link rel="stylesheet" href="CSS/style1.css">
+    <link rel="stylesheet" href="CSS/bootstrap.css">
     <style>
        .clearfix:before,
         .clearfix:after {
@@ -86,9 +88,19 @@
 </head>
 
 <body class="d-flex justify-content-center ">
-        <video autoplay muted loop id="myVideo">
-                <source src="bg2.mp4" type="video/mp4">
-        </video>
+        <section class="main">   
+                <div class="outerd">
+                    <div class="navbar navbar-default">
+                            <div class="container">
+                                <ul class="nav navbar-nav navbar-center">
+                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="./team.html">Team</a></li>
+                                    <li><a id="event-link" href="./eventf.html">Events</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                </div>  
+               </section>  
     <div class="codrops-top clearfix" style="z-index:10000000;">
         <a href="/"><strong>&laquo; Back to Home </strong></a> 
     </div>
