--- a/eventf.html
+++ b/eventf.html
@@ -38,25 +38,26 @@
         <div class="container" style="margin-top: -80px">
                 
                 <div class="row">
-                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=6&7"><div class="cont">
+                      <div class="col-sm-4 col-xs-6"><a href="brochure.pdf#page=6&7"><div class="cont">
                             <img class="img-fluid" src="img/basketball1.svg" width="100" height="100"></div></a>
                         </div>
-                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=4"><div class="cont">
+                      <div class="col-sm-4 col-xs-6"><a href="brochure.pdf#page=4"><div class="cont">
                             <img class="img-fluid" src="img/volleyball.svg" width="100" height="100"></div></a>
                         </div>
-                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=8"><div class="cont">
+                        <div class="col-sm-4 col-xs-6"><a href="brochure.pdf#page=8"><div class="cont">
                             <img class="img-fluid" src="img/volleyball-silhouette-vector-15.png" width="100" height="100"></div></a>
                         </div>
                     </div>
-                    
+                    <br>
+                    <br>
                     <div class="row">
-                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=5"><div class="cont">
+                        <div class="col-sm-4 col-xs-6"><a href="brochure.pdf#page=5"><div class="cont">
                             <img class="img-fluid" src="img/badminton_439334.png" width="100" height="100"></div></a>
                         </div>
-                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=3"><div class="cont">
+                        <div class="col-sm-4 col-xs-6"><a href="brochure.pdf#page=3"><div class="cont">
                             <img class="img-fluid" src="img/table-tennis.png" width="100" height="100"></div></a>
                         </div>
-                        <div class="col-12 col-sm-4"><a href="brochure.pdf#page=9"><div class="cont">
+                        <div class="col-sm-4 col-xs-6"><a href="brochure.pdf#page=9"><div class="cont">
                             <img class="img-fluid" src="img/chess.svg" width="100" height="100"></div></a>
                         </div>
                     </div>
