Edited Team and About Page added mobile css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <br>
                 <br>
                 <br> 
-            <h2 style="font-size: 330%">4-5<sup>th</sup> OCTOBER</h2>
+            <h2 style="font-size: 330%" class="date">4-5<sup>th</sup> OCTOBER</h2>
             <p class="desc"> THE LEADING SPORT FEST OF JUIT
             <p class="desc">GAME | LIES | WITHIN</p>
             <center><a class="btn btn-raised btn-danger" id="formb" style="margin-top: -5px;" href="RegT.html">Registrations Open</a></center>
