--- a/eventf.html
+++ b/eventf.html
@@ -35,7 +35,7 @@
         <div class="section" id="section1">
 
                 <div id="section1back"></div>                    
-        <div class="container" style="margin-top: -80px">
+        <div class="container" style="margin-top: -150px">
                 
                 <div class="row">
                       <div class="col-sm-4 col-xs-6"><a href="brochure.pdf#page=6&7"><div class="cont">
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div class="row">
-                            <center><a class="btn btn-raised btn-warning" id="formb" style="margin-top: 40px;">Registrations Open</a></center>
+                            <center><a class="btn btn-raised btn-warning" id="formb" style="margin-top: 40px;" href="RegT.html">Registrations Open</a></center>
          
                     </div>
                     <div id="eve-name">
