--- a/team.html
+++ b/team.html
@@ -28,7 +28,7 @@
                             </div>  
                     </section> 
             <center><h2>The Team</h2>
-            <p>The people who make it happen.</p></center>
+            <h3>The people who make it happen.</h3></center>
             <div class="row">
 
                 <div class="col-sm-4 col-xs-6">
@@ -71,8 +71,8 @@
          <div class="row">
                 <div class="col-sm-6 col-xs-6">
                         <div class="thumb">
-                            <img src="images/samad.jpeg" width="80%" height="auto">
-                            <div class="text">Samad - Website Creator</div>
+                            <img src="images/samad1.jpeg" width="80%" height="auto">
+                            <div class="text">Samad Khan- Website Creator</div>
                 </div>
                 </div>
                 <div class="col-sm-6 col-xs-6">
