Team Page Edited

--- a/about.html
+++ b/about.html
@@ -33,23 +33,24 @@
           </div>  
          </section>
          <div class="container justify-content-center d-flex mt-5">
-                <div class="card text-white shadow-lg text-justify mt-5 mb-5">
-                    <div class="card-header">
+                <div>
+                    <div>
                         <div class="text-center">
                             <div style="font-family: 'Cinzel'; font-size:46px;color:goldenrod">ABOUT PARAKRAM</div>
+                           
                             <div style="font-family: 'Cinzel'; font-size:30px;color:red">GAME | LIES | WITHIN </div>
-                        </div>
-                        <div class="card-body" style="font-family: 'Cinzel',sans-serif;color:black">
-        <p style="font-family: 'Mada', sans-serif;">PARAKRAM is the annual sports-fest of Jaypee University of
+                           <br>
+                         </div>
+                        <div  style="font-family: 'Cinzel',sans-serif;color:black;font-size: 20px">
+        <p style="font-family: 'Mada', sans-serif;"><b>PARAKRAM</b> is the annual sports-fest of Jaypee University of
                 Information Technology, Solan; held each year with great zeal and
                 enthusiasm. In this era of computerization and globalization where
                 our lives have become so stressful, sports and games not only provide
                 a gateway for recreation, but they also impart values like discipline,
                 responsibility, self-confidence, sacrifice and accountability. This is
-                exactly what the PARAKRAM aims to achieve with it's motto "Game
-                Lies Within".
+                exactly what the <b>PARAKRAM</b> aims to achieve with it's motto <b><i>#GameLiesWithin</i></b>.
                 <br><br>
-                On 4th October, 2019 our university will host hundreds of participants
+                On <b>4th October</b>, 2019 our university will host hundreds of participants
                 from various esteemed institutes.
                 We cordially invite you to witness this momentous sports festival and
                 live up to the glory of the sports.</p><br>
