--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 <br>
                 <br>
                 <br> 
-            <h2 style="font-size: 330%" class="date">4-5<sup>th</sup> OCTOBER</h2>
-            <p class="desc"> THE LEADING SPORT FEST OF JUIT
+            <h2 style="font-size: 330%" class="date"><b>4-5<sup>th</sup> OCTOBER</b></h2>
+            <p class="desc"> <b>THE LEADING SPORT FEST OF JUIT</b>
             <p class="desc">GAME | LIES | WITHIN</p>
             <center><a class="btn btn-raised btn-danger" id="formb" style="margin-top: -5px;" href="RegT.html">Registrations Open</a></center>
          </div>
