--- a/team.html
+++ b/team.html
@@ -31,24 +31,25 @@
             <h3>The people who make it happen.</h3></center>
             <div class="row">
 
-                <div class="col-sm-4 col-xs-6">
+                <div class="col-sm-12 col-xs-12">
                     <div class="thumb">
-                        <img src="images/pp.png" width="100%" height="auto">
-                        <div class="text">Pradyumn Agrawal- President</div>							
+                        <center><img src="images/pp.png" width="50%" height="auto">
+                        <div class="text">Pradyumn Agrawal <br>President</div>	</center>						
+                    </div>
+                </div>
+             </div>   
+                <div class="row">
+                <div class="col-sm-6 col-xs-6">
+                    <div class="thumb">
+                        <img src="images/pt1.jpg" width="80%" height="30%">
+                        <div class="text">Prashasti Diwedi<br>Treasurer</div>						
                     </div>
                 </div>
 
-                <div class="col-sm-4 col-xs-6">
-                    <div class="thumb">
-                        <img src="images/pt.jpg" width="80%" height="30%">
-                        <div class="text">Prashasti Diwedi - Treasurer</div>						
-                    </div>
-                </div>
-
-                <div class="col-sm-4 col-xs-6">
+                <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
                         <img src="images/ns.jpg" width="150%" height="auto">
-                        <div class="text">Nayanika Sharma - Secretary</div>						
+                        <div class="text">Nayanika Sharma<br>Secretary</div>						
                     </div>
                 </div>
             </div>
@@ -56,14 +57,14 @@
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
                         <img src="images/gs.jpg" width="80%" height="auto">
-                        <div class="text">Garima Kanwar - Sports Coordinator</div>						
+                        <div class="text">Garima Kanwar<br>Sports Coordinator</div>						
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
                         <img src="images/mehul.jpg" width="80%" height="auto">
-                        <div class="text">Mehul - Sports Coordinator</div>
+                        <div class="text">Mehul<br>Sports Coordinator</div>
                 </div>							
                 
              </div>
@@ -72,13 +73,13 @@
                 <div class="col-sm-6 col-xs-6">
                         <div class="thumb">
                             <img src="images/samad1.jpeg" width="80%" height="auto">
-                            <div class="text">Samad Khan- Website Creator</div>
+                            <div class="text">Samad Khan<br>Website Creator</div>
                 </div>
                 </div>
                 <div class="col-sm-6 col-xs-6">
                         <div class="thumb">
                             <img src="images/kautubh.jpeg" width="80%" height="auto">
-                            <div class="text">Kaustubh - Website Creator</div>
+                            <div class="text">Kaustubh<br>Website Creator</div>
                 </div>
          </div>
         </div>
