Home Page Edited

--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
                               <li><a href="/">Home</a></li>
                               <li><a href="./team.html">Team</a></li>
                               <li><a id="event-link" href="./eventf.html">Events</a></li>
+                              <li><a id="event-link" href="./Contact.html">Contact</a></li>
                           </ul>
                       </div>
                   </div>
@@ -61,7 +62,7 @@
                    
                 </div>
             
-            <center><a class="btn btn-raised btn-danger" id="formb" style="margin-top: 25px;" href="RegT.html">Registrations Open</a></center>
+            <center><a class="btn btn-raised btn-danger" id="formb" style="margin-top: 25px;" href="RegT.html"><b>Registrations Open</b></a></center>
         </div>  
 </body>
 </html>
