--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="./team.html">Team</a></li>
                             <li><a id="event-link" href="./eventf.html">Events</a></li>
+                            <li><a id="event-link" href="./Contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -46,15 +47,10 @@
             <h2 style="font-size: 330%" class="date"><b>4-5<sup>th</sup> OCTOBER</b></h2>
             <p class="desc"> <b>THE LEADING SPORT FEST OF JUIT</b>
             <p class="desc">GAME | LIES | WITHIN</p>
-            <center><a class="btn btn-raised btn-danger" id="formb" style="margin-top: -5px;" href="RegT.html">Registrations Open</a></center>
+            <center><a class="btn btn-raised btn-danger" id="formb" style="margin-top: -5px;" href="RegT.html"><b>Registrations Open</b></a></center>
          </div>
         </div> 
       </div> 
-      <script>
-         $(window).on("load",function(){
-     $(".loader-wrapper").fadeOut("slow");
-});</script>
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 
 </body>
 </html>
