--- a/team.html
+++ b/team.html
@@ -33,7 +33,7 @@
 
                 <div class="col-sm-12 col-xs-12">
                     <div class="thumb">
-                        <center><img src="images/pp.png" width="50%" height="auto">
+                        <center><img src="images/pp.png" width="60%" height="auto" class="pt1">
                         <div class="text">Pradyumn Agrawal <br>President</div>	</center>						
                     </div>
                 </div>
