--- a/Contact.html
+++ b/Contact.html
@@ -3,6 +3,7 @@
 <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Mada" rel="stylesheet">
         <link rel="stylesheet" href="css/hov.css">
         <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -20,13 +21,13 @@
         <footer style="background-color: rgb(0, 0, 0, 0.5)">
             <h1 style="color: white; margin-left: 5%; margin-top: 5%; font-size: 40px;">Contact us</h1>
             <hr style="color: white; border: 1px solid">
-            <div class="contact" style="color: white">
-            <p>Praduymn Agrawal-President</p>
+            <div class="contact" style="color: white;font-family: 'Mada', serif;">
+            <p><b>Praduymn Agrawal-President</b></p>
             <p>president.jyc@juit.ac.in | 9012936769</p>
             <br>
-            <p>Mehul Bandlish-Sports Coordinator</p>
+            <p><b>Mehul Bandlish-Sports Coordinator</b></p>
             <p>mehulbandlish@gmail.com | 8894988348</p><br>
-            <p>Garima Kanwar-Sports Coordinator</p>
+            <p><b>Garima Kanwar-Sports Coordinator</b></p>
             <p>garimakanwar.78@gmail.com | 8988128985</p>
             </div></footer>
     </div>
