Added link to differnt games on events

--- a/eventf.html
+++ b/eventf.html
@@ -42,25 +42,25 @@
         <div class="container1">
                 
             <div class="row justify-content-center">
-                <div class="col-12 col-sm-4 kz"><a href="R1bb.html"><div class="cont">
+                <div class="col-12 col-sm-4 kz"><a href="brochure1.pdf#page=4"><div class="cont">
                     <img class="img-fluid" src="img/basketball1.svg" width="100" height="100"></div></a>
                 </div>
-                <div class="col-12 col-sm-4 kz"><a href="R1hb.html"><div class="cont">
+                <div class="col-12 col-sm-4 kz"><a href="brochure1.pdf#page=6"><div class="cont">
                     <img class="img-fluid" src="img/volleyball.svg" width="100" height="100"></div></a>
                 </div>
-                <div class="col-12 col-sm-4 kz"><a href="R1vb.html"><div class="cont">
+                <div class="col-12 col-sm-4 kz"><a href="brochure1.pdf#page=7"><div class="cont">
                     <img class="img-fluid" src="img/volleyball-silhouette-vector-15.png" width="100" height="100"></div></a>
                 </div>
             </div>
             <br>
             <div class="row justify-content-center">
-                <div class="col-12 col-sm-4 kz"><a href="R1bm.html"><div class="cont">
+                <div class="col-12 col-sm-4 kz"><a href="brochure1.pdf#page=3"><div class="cont">
                     <img class="img-fluid" src="img/badminton_439334.png" width="100" height="100"></div></a>
                 </div>
-                <div class="col-12 col-sm-4 kz"><a href="R1tt.html"><div class="cont">
+                <div class="col-12 col-sm-4 kz"><a href="brochure1.pdf#page=5"><div class="cont">
                     <img class="img-fluid" src="img/table-tennis.png" width="100" height="100"></div></a>
                 </div>
-                <div class="col-12 col-sm-4 kz"><a href="R1ch.html"><div class="cont">
+                <div class="col-12 col-sm-4 kz"><a href="brochure1.pdf#page=8"><div class="cont">
                     <img class="img-fluid" src="img/chess.svg" width="100" height="100"></div></a>
                 </div>
                 
