--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Contact us: Parakram 2K19</title>
 </head>
-<body style="background-color: black;">
+<body style="background-color: black;overflow-x:hidden;">
     <div class="row">
         <div class="col-12">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3419.3480576888933!2d77.06797031475405!3d31.016550981539204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39057db24364e085%3A0x4f4fefd65caa0317!2sJaypee%20University%20of%20Information%20Technology!5e0!3m2!1sen!2sin!4v1566765155083!5m2!1sen!2sin" width="100%" height="350px" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
