--- a/Contact.html
+++ b/Contact.html
@@ -22,13 +22,20 @@
             <h1 style="color: white; margin-left: 5%; margin-top: 5%; font-size: 40px;">Contact us</h1>
             <hr style="color: white; border: 1px solid">
             <div class="contact" style="color: white;font-family: 'Mada', serif;">
-            <p><b>Praduymn Agrawal-President</b></p>
-            <p>president.jyc@juit.ac.in | 9012936769</p>
+            <p><b>Praduymn Agrawal
+                <br>President</b>
             <br>
-            <p><b>Mehul Bandlish-Sports Coordinator</b></p>
-            <p>mehulbandlish@gmail.com | 8894988348</p><br>
-            <p><b>Garima Kanwar-Sports Coordinator</b></p>
-            <p>garimakanwar.78@gmail.com | 8988128985</p>
+            president.jyc@juit.ac.in | 9012936769    
+        </p>
+            <p></p>
+            <p><b>Mehul Bandlish
+                <br>Sports Coordinator</b>
+                <br>mehulbandlish@gmail.com | 8894988348
+            </p>
+            <p><b>Garima Kanwar
+                <br>Sports Coordinator</b>
+                <br>garimakanwar.78@gmail.com | 8988128985
+            </p>
             </div></footer>
     </div>
 </div>
