--- a/RegT.html
+++ b/RegT.html
@@ -10,7 +10,7 @@
 <body style="background-color: black;">
 <div class="container">
 <div class="row">
-        <iframe class="col-12 col-sm-6" src="https://docs.google.com/forms/d/e/1FAIpQLSdXt3lIUADD7zQo9bQHaLkUH5NYWK50PvCTdGemmceZoCSGJw/viewform?embedded=true"height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe class="col-12 col-sm-6"  src="https://docs.google.com/forms/d/e/1FAIpQLSdXt3lIUADD7zQo9bQHaLkUH5NYWK50PvCTdGemmceZoCSGJw/viewform?embedded=true"height="1400" width="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
           
     <img class="d-none d-sm-block col-12 col-sm-6" style="margin-top: 10%; height:70%;
     border-radius: 66px;"    
