--- a/about.html
+++ b/about.html
@@ -15,6 +15,21 @@
     body {
         background: linear-gradient(to right, #723D46, #70A37F); 
       }
+      @media only screen and (max-width: 500px){
+    .video{
+        width:360px;
+        height:250px;
+        padding:18px;
+        padding-top:0px;
+    }
+}
+ 
+@media only screen and (min-width: 768px){
+    .video {
+        width:720px;
+        height:400px;
+    }
+}
       </style>
 </head>
 <body>
@@ -62,7 +77,10 @@
                    
                 </div>
             
-            <center><a class="btn btn-raised btn-danger" id="formb" style="margin-top: 25px;" href="RegT.html"><b>Registrations Open</b></a></center>
-        </div>  
+                <center><a class="btn btn-raised btn-danger" id="formb" style="margin-top: 25px;" href="RegT.html"><b>Registrations Open</b></a></center>
+                <center><h1 style="font-family: 'Cinzel'; font-size:46px;color:goldenrod;margin:30px">FLASHBACK</h1>
+                <iframe  class="video"  src="https://www.youtube.com/embed/icEViq0pMk0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </center>
+            </div>  
 </body>
 </html>
