--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <br>
                 <br> 
             <h2 style="font-size: 330%;color:black" class="date"><b>4-5<sup>th</sup> OCTOBER</b></h2>
-            <p class="desc"> <b>THE LEADING SPORT FEST OF JUIT</b>
-            <p class="desc">GAME | LIES | WITHIN</p>
-            <center><a class="btn btn-raised btn-warning" id="formb" style="margin-top: -5px;" href="RegT.html"><b>Registrations Open</b></a></center>
+            <p class="desc"> <b>THE LEADING SPORTS FEST OF JUIT</b>
+            <p class="desc" style="color:red"><b>GAME | LIES | WITHIN</b></p>
+            <center><a class="btn btn-raised btn-warning" id="formb" style="margin-top: 0px;" href="RegT.html"><b>Registrations Open</b></a></center>
          </div>
         </div> 
       </div> 
