--- a/team.html
+++ b/team.html
@@ -33,8 +33,9 @@
 
                 <div class="col-sm-12 col-xs-12">
                     <div class="thumb">
-                        <center><img src="images/pp.png" width="60%" height="auto" class="pt1">
-                        <div class="text">Pradyumn Agrawal <br>President</div>	</center>						
+                        <center><img src="images/pp.png" width="50%" height="auto" class="pt1"></center>
+                        <div class="text" id="pt2"><p style="margin-left: -5px;;font-size: 1.2em;padding: 0%;margin: 0%;"><b>Pradyumn Agarwal</b></p>
+                            <p style="margin-left: 0px;;font-size: 1.2em;margin-top: 0%;padding: 0%;">President</p> </div>					
                     </div>
                 </div>
              </div>   
@@ -42,14 +43,14 @@
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
                         <img src="images/pt1.jpg" width="80%" height="30%">
-                        <div class="text">Prashasti Diwedi<br>Treasurer</div>						
+                        <div class="text"><b>Prashasti Diwedi</b><br>Treasurer</div>						
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
                         <img src="images/ns.jpg" width="150%" height="auto">
-                        <div class="text">Nayanika Sharma<br>Secretary</div>						
+                        <div class="text"><b>Nayanika Sharma</b><br>Secretary</div>						
                     </div>
                 </div>
             </div>
@@ -57,14 +58,14 @@
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
                         <img src="images/gs.jpg" width="80%" height="auto">
-                        <div class="text">Garima Kanwar<br>Sports Coordinator</div>						
+                        <div class="text"><b>Garima Kanwar</b><br>Sports Coordinator</div>						
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
-                        <img src="images/mehul.jpg" width="80%" height="auto">
-                        <div class="text">Mehul<br>Sports Coordinator</div>
+                        <img src="images/mehul.jpg" width="110%" height="auto">
+                        <div class="text"><b>Mehul Bandlish</b><br>Sports Coordinator</div>
                 </div>							
                 
              </div>
@@ -73,13 +74,13 @@
                 <div class="col-sm-6 col-xs-6">
                         <div class="thumb">
                             <img src="images/samad1.jpeg" width="80%" height="auto">
-                            <div class="text">Samad Khan<br>Website Creator</div>
+                            <div class="text"><b>Samad Khan</b><br>Website Creator</div>
                 </div>
                 </div>
                 <div class="col-sm-6 col-xs-6">
                         <div class="thumb">
-                            <img src="images/kautubh.jpeg" width="80%" height="auto">
-                            <div class="text">Kaustubh<br>Website Creator</div>
+                            <img src="images/kautubh.jpeg" width="85%" height="auto">
+                            <div class="text"><b>Kaustubh Mishra</b><br>Website Creator</div>
                 </div>
          </div>
         </div>
