--- a/Contact.html
+++ b/Contact.html
@@ -16,7 +16,7 @@
         </div>
     </div>
 <div class="row">
-        <iframe class="col-12 col-sm-6" src="https://docs.google.com/forms/d/e/1FAIpQLSfJN_ZN1QndF99YK7pomB4aU4WcVeGgsclShfpZWSN-biT_7Q/viewform?embedded=true" height="477" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfJN_ZN1QndF99YK7pomB4aU4WcVeGgsclShfpZWSN-biT_7Q/viewform?embedded=true" width="700" height="820" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <div class="col-12 col-sm-6">
         <footer style="background-color: rgb(0, 0, 0, 0.5)">
             <h1 style="color: white; margin-left: 5%; margin-top: 5%; font-size: 40px;">Contact us</h1>
@@ -24,17 +24,17 @@
             <div class="contact" style="color: white;font-family: 'Mada', serif;">
             <p><b>Praduymn Agrawal
                 <br>President</b>
-            <br>
-            president.jyc@juit.ac.in | 9012936769    
+                <br>
+           <a href="mailto:president.jyc@juit.ac.in" target="_blank" style="color:white">president.jyc@juit.ac.in </a>| <a href="tel:9012936769" style="color:white">9012936769</a>
         </p>
             <p></p>
             <p><b>Mehul Bandlish
                 <br>Sports Coordinator</b>
-                <br>mehulbandlish@gmail.com | 8894988348
+                <br><a href="mailto:mehulbandlish@gmail.com" target="_blank" style="color:white">mehulbandlish@gmail.com</a>| <a href="tel:8894988348" style="color:white">88949988348</a>
             </p>
             <p><b>Garima Kanwar
                 <br>Sports Coordinator</b>
-                <br>garimakanwar.78@gmail.com | 8988128985
+                <br><a href="mailto:garimakanwar.78@gmail.com" target="_blank" style="color:white">garimakanwar.78@gmail.com</a>| <a href="tel:8988128985" style="color:white">8988128985</a>
             </p>
             </div></footer>
     </div>
