--- a/team.html
+++ b/team.html
@@ -28,28 +28,28 @@
                             </div>  
                     </section> 
             <center><h2>The Team</h2>
-            <h3>The people who make it happen.</h3></center>
+            <h3 style="padding:15px">The people who make it happen</h3></center>
             <div class="row">
 
                 <div class="col-sm-12 col-xs-12">
                     <div class="thumb">
-                        <center><img src="images/pp.png" width="50%" height="auto" class="pt1"></center>
+                        <a href="Contact.html" target="_blank"><center><img src="images/pp.png" width="50%" height="auto" class="pt1"></center></a>
                         <div class="text" id="pt2"><p style="margin-left: -5px;;font-size: 1.2em;padding: 0%;margin: 0%;"><b>Pradyumn Agarwal</b></p>
-                            <p style="margin-left: 0px;;font-size: 1.2em;margin-top: 0%;padding: 0%;">President</p> </div>					
+                            <p style="margin-left: 0px;;font-size: 1.2em;margin-top: 0%;padding: 0%;">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspPresident</p> </div>					
                     </div>
                 </div>
              </div>   
                 <div class="row">
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
-                        <img src="images/pt1.jpg" width="80%" height="30%">
+                        <a href="Contact.html" target="_blank"><img src="images/pt1.jpg" width="80%" height="30%"></a>
                         <div class="text"><b>Prashasti Diwedi</b><br>Treasurer</div>						
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
-                        <img src="images/ns.jpg" width="150%" height="auto">
+                        <a href="Contact.html" target="_blank"><img src="images/ns.jpg" width="150%" height="auto" ></a>
                         <div class="text"><b>Nayanika Sharma</b><br>Secretary</div>						
                     </div>
                 </div>
@@ -57,14 +57,14 @@
             <div class="row">
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
-                        <img src="images/gs.jpg" width="80%" height="auto">
+                        <a href="Contact.html" target="_blank"><img src="images/gs.jpg" width="80%" height="auto"></a>
                         <div class="text"><b>Garima Kanwar</b><br>Sports Coordinator</div>						
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-xs-6">
                     <div class="thumb">
-                        <img src="images/mehul.jpg" width="110%" height="auto">
+                        <a href="Contact.html" target="_blank"><img src="images/mehul.jpg" width="110%" height="auto"></a>
                         <div class="text"><b>Mehul Bandlish</b><br>Sports Coordinator</div>
                 </div>							
                 
@@ -73,13 +73,13 @@
          <div class="row">
                 <div class="col-sm-6 col-xs-6">
                         <div class="thumb">
-                            <img src="images/samad1.jpeg" width="80%" height="auto">
+                            <a href="./Contact.html" target="_blank"><img src="images/samad1.jpeg" width="80%" height="auto" ></a>
                             <div class="text"><b>Samad Khan</b><br>Website Creator</div>
                 </div>
                 </div>
                 <div class="col-sm-6 col-xs-6">
                         <div class="thumb">
-                            <img src="images/kautubh.jpeg" width="85%" height="auto">
+                            <a href="Contact.html" target="_blank"><img src="images/kautubh.jpeg" width="85%" height="auto"></a>
                             <div class="text"><b>Kaustubh Mishra</b><br>Website Creator</div>
                 </div>
          </div>
