--- a/index.html
+++ b/index.html
@@ -38,13 +38,8 @@
                 <source src="bg2.mp4" type="video/mp4">
             </video>
             <div class="row"> 
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br> 
-            <h2 style="font-size: 330%;color:black" class="date"><b>4-5<sup>th</sup> OCTOBER</b></h2>
+                
+            <h2 style="font-size: 330%;color:black;margin-top:280px" class="date"><b>4-5<sup>th</sup> OCTOBER</b></h2>
             <p class="desc"> <b>THE LEADING SPORTS FEST OF JUIT</b>
             <p class="desc" style="color:red"><b>GAME | LIES | WITHIN</b></p>
             <center><a class="btn btn-raised btn-warning" id="formb" style="margin-top: 0px;" href="RegT.html"><b>Registrations Open</b></a></center>
